ubiquity (1.6.1) UNRELEASED; urgency=low

  * Modified the install component to allow grub preseeding in automatic mode.
  * Add missing subprocess import to base.py.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 15:04:59 -0400

ubiquity (1.6.0) gutsy; urgency=low

  [ Mario Limonciello ]
  * Add support for all 3 different nvidia drivers.
  * Add initial support for xmltv during installation.
  * Update debconf text for myth_button & mythweb.
  * Explicity install libvia* with openchrome install.
  * Setup autologin for new Xfce based approach.

  [ Colin Watson ]
  * Update translations from Rosetta.
  * Set Maintainer to ubuntu-installer@lists.ubuntu.com and put Evan and
    myself in Uploaders.

  [ Evan Dandrea ]
  * Slight improvement for automating migration-assistant.
  * Add preseed hooks for rebooting, install failure, and install
    success.
  * Automatic update of included source packages: hw-detect 1.53ubuntu3,
    kboot-installer 0.0.1ubuntu5, partman-base 107ubuntu4, partman-
    basicfilesystems 54ubuntu4, user-setup 1.14ubuntu3, yaboot-installer
    1.1.11ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 11:53:06 -0400

ubiquity (1.5.18) gutsy; urgency=low

  [ Mario Limonciello ]
  * Fix minor typo in apply-drivers.

  [ Colin Watson ]
  * GTK frontend:
    - Make release notes button work again (LP: #138365).

  [ Evan Dandrea ]
  * Fix typo in realpath_recurse (LP: #144460).
  * Automatic update of included source packages: base-installer
    1.81ubuntu3, console-setup 1.16ubuntu5.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 24 Sep 2007 16:19:07 -0400

ubiquity (1.5.17) gutsy; urgency=low

  * Use the --automatic option when running ubiquity from the init script
    (thanks, Evan Dandrea).
  * Work around migration-assistant always being shown in automatic
    installs.
  * Automatic update of included source packages: migration-assistant 0.5.1,
    partman-auto-loop 0ubuntu9.
