@@ -2,8 +2,10 @@ ubiquity (1.6.1) UNRELEASED; urgency=low
 
   * Modified the install component to allow grub preseeding in automatic mode.
   * Add missing subprocess import to base.py.
+  * Respect preseeded values for grub-installer/with_other_os and
+    grub-installer/only_debian.
 
- -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 15:04:59 -0400
+ -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 15:25:34 -0400
 
 ubiquity (1.6.0) gutsy; urgency=low
 
